--- a/SisGes/SisGes/src/br/senai/sc/sisges/jframe/SisgesjFrame.form
+++ b/SisGes/SisGes/src/br/senai/sc/sisges/jframe/SisgesjFrame.form
@@ -42,6 +42,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Consultar agenda"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menCadastrarProdutoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menListarProduto">
               <Properties>
